--- a/haskell-playground.cabal
+++ b/haskell-playground.cabal
@@ -21,6 +21,7 @@ executable haskell-playground
 library haskell-katas
     import: warnings
     exposed-modules: SmallestPossibleSum
+                   , RandomEasyOnes
     build-depends: base ^>=4.14.3.0
     hs-source-dirs: katas
     default-language: Haskell2010
@@ -30,7 +31,9 @@ test-suite haskell-katas-tests
     main-is: Main.hs
     other-modules: 
         SmallestPossibleSumSpec,
-        SmallestPossibleSum
+        SmallestPossibleSum,
+        AssemblerInterpreterSpec,
+        AssemblerInterpreter,
     build-depends: 
         base ^>=4.14.3.0,
         hspec ^>=2.10.1,
