--- a/haskell-playground.cabal
+++ b/haskell-playground.cabal
@@ -1,4 +1,4 @@
-cabal-version: 3.8
+cabal-version: 3.6
 name: haskell-playground
 version: 0.1.0.0
 license: NONE
@@ -12,7 +12,7 @@ executable haskell-playground
     import: warnings
     main-is: Main.hs
     other-modules: ParseSql
-    build-depends: base ^>=4.14.3.0
+    build-depends: base ^>=4.14
     hs-source-dirs: app
     default-language: Haskell2010
 
@@ -22,21 +22,24 @@ library haskell-katas
     import: warnings
     exposed-modules: SmallestPossibleSum
                    , RandomEasyOnes
-    build-depends: base ^>=4.14.3.0
+                   , RegexParser
+    build-depends: base ^>=4.14
     hs-source-dirs: katas
     default-language: Haskell2010
 
-test-suite haskell-katas-tests
+executable tests
     import: warnings
     main-is: Main.hs
     other-modules: 
+        RegexParserSpec,
+        RegexParser,
         SmallestPossibleSumSpec,
         SmallestPossibleSum,
         ListsAsFoldsSpec,
         ListsAsFoldsPreload,
         ListsAsFolds,
     build-depends: 
-        base ^>=4.14.3.0,
+        base ^>=4.14,
         hspec ^>=2.10.1,
     hs-source-dirs: katas-tests katas
     default-language: Haskell2010
